# meego-panel-networks

./: HACKING  Makefile.am  acinclude.m4  autogen.sh  configure.ac  uncrustify.cfg
.tx/: config
callouts/3g/: ggg-country-dialog.c  ggg-manual-dialog.c  ggg-plan-dialog.c  ggg-provider-dialog.c  ggg-service-dialog.c  main.c
callouts/openconnect/: main.c
carrick/: Makefile.am  carrick-list.c  carrick-list.h  carrick-network-model.c  carrick-network-model.h  carrick-notification-manager.c  carrick-pane.c  carrick-service-item.c  mux-banner.c  nbtk-gtk-expander.c
data/: Makefile.am  carrick-standalone.desktop.in.in
po/: LINGUAS  ar.po  ast.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  es_MX.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  km.po  ko.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  (+6 more)
src/: carrick.c
